--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/throttler": "^6.0.0",
     "axios": "^1.7.3",
     "cache-manager": "^5.7.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helmet": "^7.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
